Perkin-UAT/force-app/main/default/objects/Cases_snapshot__c/Cases_snapshot__c.object-meta.xml
<CustomObject>
    <label>Dx Open Cases</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Dx Open Cases Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dx Open Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>