Perkin-UAT/force-app/main/default/objects/Cases_snapshot__c/fields/CaseRef__c.field-meta.xml
<CustomField>
    <fullName>CaseRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Cases_snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>