Perkin-UAT/force-app/main/default/objects/Cases_snapshot__c/fields/Date_Time_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Closed__c</fullName>
    <label>Date Time Closed</label>
    <type>DateTime</type>
</CustomField>