Perkin-UAT/force-app/main/default/objects/Cases_snapshot__c/fields/Type_Of_Case__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Case__c</fullName>
    <label>Type Of Case</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applications</fullName>
            </value>
            <value>
                <fullName>Chips</fullName>
            </value>
            <value>
                <fullName>Consumables</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Misdirect</fullName>
            </value>
            <value>
                <fullName>Technical Question</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Preventative Maintenance</fullName>
            </value>
            <value>
                <fullName>Reagents</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Anomaly</fullName>
            </value>
            <value>
                <fullName>Change Request - Customer</fullName>
            </value>
            <value>
                <fullName>Change Request - Internal</fullName>
            </value>
            <value>
                <fullName>Change Request - Quality</fullName>
            </value>
            <value>
                <fullName>Complaint - Internal</fullName>
            </value>
            <value>
                <fullName>Complaint - Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>