Perkin-UAT/force-app/main/default/objects/Cases_snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Legacy_Record_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>